--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,77 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #F6F8F9;
+    font-family: 'Fredoka', sans-serif;
+
+    /* background-color: #fffffe; */
+}
+
+.card-container::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Header Section */
+header h1 {
+    color: #e53170;        
+    height: 80px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header{
+    height: 100px;
+}
+
+/* Paragrafo */
+
+.txt-container{
+    width: 80%;
+    margin: auto;
+}
+
+p{
+    text-align: center;
+    text-shadow: 0px 0px 20px 0px grey;
+}
+
+
+/* Float Card */
+
+.float-card{
+    width: 80%;
+    margin: 40px auto;
+}
+
+.card-container{
+    width: calc(100% / 3);
+    float: left;
+    margin-bottom: 30px;
+}
+
+.card{
+    background-color: black;
+    box-shadow: 0 0 20px 5px grey;
+    width: 90%;
+    height: 100px;
+    color: white;
+}
+
+.card img{
+    height: 100%;
+    float: left;
+    margin-right: 10px;
+}
+
+h5, h6{
+    margin-bottom: 10px;
+    padding: 10px 0px 0px 5px;
+}
+
+.cyan {
+    color: cyan;
+    font-size: 12px;
 }
