--- a/css/style.css
+++ b/css/style.css
@@ -3,80 +3,71 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Fredoka', sans-serif;
-
-    /* background-color: #fffffe; */
 }
 
-.float-card::after {
+.clearfix::after {
     content: "";
     display: table;
     clear: both;
 }
 
 /* Header Section */
-header h1 {
-    color: #e53170;        
-    height: 80px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;    
-    text-shadow: 0px 0px 30px grey;
-}
-
-header{
-    height: 100px;
+h1 {
+    color: #e53170;
+    text-align: center;
+    margin-top: 40px;
+    font-size: 40px;        
 }
 
 /* Paragrafo */
 
-.txt-container{
-    width: 80%;
-    margin: auto;
+.container{
+    max-width: 1170px;
+    margin: 0 auto;
+    
 }
 
 p{
-    text-align: center;
-    text-shadow: 0px 0px 20px 0px grey;
+    text-align: center;    
+    font-size: 18px;
+    margin-bottom: 50px;
 }
 
-
-/* Float Card */
-
-.float-card{
-    width: 80%;
-    margin: 40px auto;
-}
-
-.card-container{
-    width: calc(100%/3);
+.col{
+    width: calc(100% / 3);
     float: left;
-    margin-bottom: 30px;
-    display: flex;    
-    flex-wrap: nowrap;
-    justify-content: center;
+    min-width: 330px;
+    padding: 0 16px;
 }
 
-.card{
+.card {
     background-color: black;
     box-shadow: 0 0 20px 2px grey;
-    width: 90%;
-    height: 100px;
+    margin-bottom: 50px;
     color: white;
 }
 
-.card img{
-    height: 100%;
+.card .avatar{
+    width: 100px;
     float: left;
-    margin-right: 10px;
 }
 
-h5, h6{
-    margin-bottom: 8px;
-    padding: 10px 0px 0px 0px;
+.card .contents{
+    float: right;
+    width: calc(100% - 100px);
+    padding-left: 16px;
+
 }
 
-.cyan {
+.card .name {
+    margin: 12px 0 6px;
+}
+
+.card .position {
+    padding-bottom: 6px;
+}
+
+.card a{
+    text-decoration: none;
     color: cyan;
-    font-size: 12px;
 }
